# python-django-development-project-52

./: Makefile  README.md  build.sh  pyproject.toml  setup.cfg
task_manager/: mixins.py  settings.py  tests.py  texts.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_labels_alter_task_status.py  0003_alter_task_labels.py  0004_alter_task_executor.py  0005_alter_task_executor.py
task_manager/templates/: delete.html  form.html  index.html
task_manager/templates/errors/: error_404.html  error_500.html
task_manager/templates/labels/: labels.html
task_manager/templates/layout/: base.html  footer.html  header.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/tasks/: task_detail.html  tasks.html
task_manager/templates/users/: list.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/management/commands/: createsuper.py
task_manager/users/migrations/: 0001_initial.py
